--- a/produk.html
+++ b/produk.html
@@ -308,9 +308,9 @@
       { name: "VIDIO PLATINUM + LIGA 1 - 1 BULAN (SHARING)", price: "Rp24.000", img: "https://i.postimg.cc/zLKDNgWz/vidio.png" },
       { name: "YOUKU PREMIUM - 1 TAHUN (SHARING)", price: "Rp15.000", img: "https://i.postimg.cc/D42wBwS2/youku.png" },
       { name: "CAPCUT - 7 HARI (SHARING)", price: "Rp10.000", img: "https://i.postimg.cc/WFN8V0Kg/capcut.png" },
-      { name: "BSTATION PREMIUM - 1 TAHUN (SHARING)", price: "Rp20.000", img: "https://i.postimg.cc/VrD69FyF/bstation.png" }
+      { name: "YOUTUBE PREMIUM - 1 BULAN (PRIVATE)", price: "Rp10.000", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Youtube_logo.png/640px-Youtube_logo.png" },
+      { name: "BSTATION PREMIUM - 1 TAHUN (SHARING)", price: "Rp20.000", img: "https://i.postimg.cc/VrD69FyF/bstation.png" },
       { name: "YOUTUBE PREMIUM - 3 BULAN (PRIVATE)", price: "Rp30.000", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Youtube_logo.png/640px-Youtube_logo.png" }
-      { name: "YOUTUBE PREMIUM - 1 BULAN (PRIVATE)", price: "Rp10.000", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Youtube_logo.png/640px-Youtube_logo.png" } /* URL Gambar Youtube diperbarui ke link langsung dari Wikipedia */
     ];
 
     function renderProducts(list) {
