--- a/produk.html
+++ b/produk.html
@@ -256,7 +256,7 @@
     </div>
   </header>
 
-  <div class="popup-info">Kenapa harus Veltra Store? Harga murah, layanan cepat, dan 100% terpercaya. Terbukti dari banyaknya testimoni!</div>
+  <div class="popup-info">Silahkan Pilih Produk Yang kamu Mau,Nanti Otomatis Diarahkan Ke WhatsApp Veltra Store untuk Diproses 🙏😺</div>
 
   <div class="search-bar">
     <input type="text" placeholder="Cari aplikasi..." onkeyup="filterProducts(this.value)" />
