--- a/produk.html
+++ b/produk.html
@@ -291,10 +291,10 @@
     const products = [
       { name: "NETFLIX 1P1U - 1 BULAN", price: "Rp43.000", img: "https://i.postimg.cc/H8JQWztc/netflix.png" },
       { name: "CANVA PRO - 1 TAHUN (INVITE)", price: "Rp15.000", img: "https://i.postimg.cc/yJt64TWr/canva.png" },
-      { name: "GEMINI AI + GDRIVE 2TB + VEO3 - 15 BULAN (PRIVATE)", price: "Rp35.000", img: "https://i.postimg.cc/Y2LkKH7p/gemini.png" },
-{ name: "VPN HMA - 1 BULAN (SHARING)", price: "Rp15.000", img: "https://i.postimg.cc/43xhs7c5/hma.png" },
-{ name: "VPN HMA - 1 BULAN (PRIVATE)", price: "Rp25.000", img: "https://i.postimg.cc/43xhs7c5/hma.png" },
-{ name: "VPN EXPRESS - 1 BULAN (SHARING)", price: "Rp17.000", img: "https://i.postimg.cc/3x2vN6Ff/expressvpn.png" },
+      { name: "GEMINI AI + GDRIVE 2TB + VEO3 - 15 BULAN (PRIVATE)", price: "Rp35.000", img: "<img src="https://i.ibb.co/p6sfjDZx/94383cb6-aa1a-46b9-8aa1-4f2bd3ad7d49.jpg" alt="Gambar Produk" width="300">" },
+{ name: "VPN HMA - 1 BULAN (SHARING)", price: "Rp15.000", img: "<img src="https://i.ibb.co/W4tKbDrg/1751196545642.jpg" alt="Gambar Produk" width="300" style="border-radius: 12px;">" },
+{ name: "VPN HMA - 1 BULAN (PRIVATE)", price: "Rp25.000", img: "<img src="https://i.ibb.co/W4tKbDrg/1751196545642.jpg" alt="Gambar Produk" width="300" style="border-radius: 12px;">" },
+{ name: "VPN EXPRESS - 1 BULAN (SHARING)", price: "Rp17.000", img: "<img src="https://i.ibb.co/27qXbf9L/1751196458893-2.jpg" alt="Gambar Produk" width="300" style="border-radius: 12px;">" },
       { name: "SPOTIFY PREMIUM STUDENT - 1 BULAN (PRIVATE)", price: "Rp34.000", img: "https://i.postimg.cc/Y4kfN1tZ/spotify.png" },
       { name: "CAPCUT - 1 BULAN (PRIVATE)", price: "Rp28.000", img: "https://i.postimg.cc/WFN8V0Kg/capcut.png" },
       { name: "CHATGPT PLUS 4.0 - 1 BULAN (PRIVATE)", price: "Rp25.000", img: "https://i.postimg.cc/2VFsFxYN/chatgpt.png" },
