--- a/produk.html
+++ b/produk.html
@@ -492,7 +492,7 @@
 
     const products = [
       // Contoh: Netflix sekarang punya oldPrice untuk harga coret
-      { name: "NETFLIX 1P1U - 1 BULAN", price: "Rp40.000", oldPrice: "Rp43.000", img: "https://i.postimg.cc/H8JQWztc/netflix.png", badge: "TERMANTAP" },
+      { name: "NETFLIX 1P1U - 1 BULAN", price: "Rp40.000", oldPrice: "Rp43.000", img: "https://i.postimg.cc/H8JQWztc/netflix.png", badge: "TERLARIS" },
       { name: "CANVA PRO - 1 TAHUN (INVITE)", price: "Rp12.000", oldPrice: "Rp15.000", img: "https://i.postimg.cc/yJt64TWr/canva.png" },
       { name: "GEMINI AI + GDRIVE 2TB + VEO3 - 15 BULAN (PRIVATE)", price: "Rp30.000", oldPrice: "Rp35.000", img: "https://i.postimg.cc/Y2LkKH7p/gemini.png" },
       { name: "VPN HMA - 1 BULAN (SHARING)", price: "Rp12.000", oldPrice: "Rp15.000", img: "https://i.postimg.cc/43xhs7c5/hma.png" },
