--- a/produk.html
+++ b/produk.html
@@ -163,11 +163,7 @@
       display: block;
     }
 
-    /* Welcome Popup & Info */
-    .welcome-popup {
-      display: none;
-    }
-
+    /* Popup Informasi (ini tetap ada) */
     .popup-info {
       background-color: #e6f7ff;
       padding: 1rem;
@@ -228,7 +224,7 @@
     /* Product Card */
     .product {
       background-color: #ffffff;
-      padding: 1rem; /* Padding lebih kecil */
+      padding: 0.8rem; /* Padding lebih kecil */
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
       display: flex;
@@ -237,7 +233,7 @@
       text-align: center;
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
-      height: 220px; /* Tinggi kartu lebih pendek */
+      height: 180px; /* Tinggi kartu sangat ringkas */
       justify-content: space-between;
       cursor: pointer;
     }
@@ -274,27 +270,27 @@
     }
 
     .product img {
-      width: 70px; /* Sedikit lebih kecil */
-      height: 70px; /* Sedikit lebih kecil */
-      margin-bottom: 0.2rem;
+      width: 60px; /* Lebih kecil */
+      height: 60px; /* Lebih kecil */
+      margin-bottom: 0.4rem; /* Sesuaikan margin */
       object-fit: contain;
     }
 
     .product .product-name {
-      font-size: 0.9rem; /* Ukuran font sedikit lebih kecil */
+      font-size: 0.85rem; /* Ukuran font lebih kecil */
       font-weight: 500;
       color: #444;
-      margin-bottom: 0.3rem; /* Mengurangi margin-bottom */
-      min-height: 40px; /* Min-height disesuaikan */
+      margin-bottom: 0.4rem; /* Mengurangi margin-bottom untuk mendekatkan ke tombol */
+      min-height: 35px; /* Min-height lebih kecil */
       display: flex;
       align-items: center;
       justify-content: center;
-      line-height: 1.3; /* Line-height lebih rapat */
+      line-height: 1.2; /* Line-height lebih rapat */
       text-align: center;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
-      -webkit-line-clamp: 3; /* Maksimal 3 baris untuk teks yang panjang */
+      -webkit-line-clamp: 2; /* Maksimal 2 baris untuk teks yang lebih ringkas */
       -webkit-box-orient: vertical;
       white-space: normal;
     }
@@ -303,20 +299,33 @@
       color: #e0e0e0;
     }
 
-    .product .choose-text {
-        font-size: 0.8rem; /* Ukuran font "Pilih" sedikit lebih kecil */
+    .product .choose-button {
+        background-color: #ff69b4; /* Pink */
+        color: white;
+        padding: 0.4rem 0.8rem; /* Padding tombol lebih kecil */
+        border-radius: 8px; /* Sudut lebih lembut */
+        border: none;
+        font-size: 0.8rem; /* Ukuran font tombol */
         font-weight: 600;
-        color: #007bff; /* Warna biru untuk teks "Pilih" */
-        margin-top: auto;
-        padding-top: 0.3rem; /* Padding atas lebih kecil */
-        opacity: 0.9;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        width: 80%; /* Lebar tombol */
+        margin-top: auto; /* Dorong ke bawah */
     }
 
-    body.dark .product .choose-text {
-        color: #64b5f6;
+    body.dark .product .choose-button {
+        background-color: #e91e63; /* Pink gelap untuk dark mode */
     }
 
-    /* Modal Styles */
+    .product .choose-button:hover {
+        background-color: #e0539c; /* Pink lebih gelap saat hover */
+    }
+
+    body.dark .product .choose-button:hover {
+        background-color: #c2185b; /* Pink gelap saat hover di dark mode */
+    }
+
+    /* Modal Styles (untuk pilihan produk, ini tetap ada) */
     .modal {
       display: none; /* Hidden by default */
       position: fixed; /* Stay in place */
@@ -557,7 +566,6 @@
   </style>
 </head>
 <body>
-  <div class="welcome-popup">Selamat datang kak di Veltra Store!</div>
   <header>
     <div class="logo-section">
       <img src="https://i.postimg.cc/jDLNTZZz/animeguy.jpg" alt="anime logo">
@@ -837,14 +845,12 @@
       list.forEach(product => {
         const badgeHtml = product.badge ? `<div class="badge">${product.badge}</div>` : '';
 
-        // Untuk kartu produk utama, kita tidak menampilkan harga atau tombol order
-        // Cukup nama produk dan gambar
         productGrid.innerHTML += `
           <div class="product" onclick="openProductModal('${product.id}')">
             ${badgeHtml}
             <img src="${product.img}" alt="${product.name}" loading="eager">
             <div class="product-name">${product.name}</div>
-            <div class="choose-text">Pilih</div>
+            <button class="choose-button">Pilih</button>
           </div>
         `;
       });
@@ -928,6 +934,9 @@
         document.body.classList.add("dark");
       }
       renderProducts(products); // Initial render
+      
+      // Menghapus *SEMUA* logika yang terkait dengan welcome pop-up atau pop-up otomatis lainnya
+      // Saya akan memastikan tidak ada panggilan fungsi atau elemen CSS yang menyebabkan pop-up kosong muncul secara otomatis
     });
 
     function toggleMenu() {
