--- a/produk.html
+++ b/produk.html
@@ -664,7 +664,7 @@
         id: 'netflix',
         name: "NETFLIX 1P1U",
         img: "https://i.postimg.cc/H8JQWztc/netflix.png",
-        badge: "TERMANTAP",
+        badge: "TERLARIS",
         variants: [
           { type: "1 BULAN", price: "Rp43.000", badge: "TERMANTAP" } // Badge bisa spesifik untuk varian
         ]
