--- a/produk.html
+++ b/produk.html
@@ -866,7 +866,7 @@
       {
         id: 'bstation',
         name: "BSTATION PREMIUM",
-        img: "https://i.postimg.cc/VrD69FyF/bstation.png",
+        img: "https://imgur.com/a/bJi4oJf",
         variants: [
           { type: "1 TAHUN (SHARING)", price: "Rp20.000" }
         ]
