--- a/produk.html
+++ b/produk.html
@@ -866,7 +866,7 @@
       {
         id: 'bstation',
         name: "BSTATION PREMIUM",
-        img: "https://imgur.com/a/bJi4oJf",
+        img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUAcIjoUKoGVPfFoDk1gzZS85Ny0BfFnNuDb0_y0gBXQ&s",
         variants: [
           { type: "1 TAHUN (SHARING)", price: "Rp20.000" }
         ]
