--- a/produk.html
+++ b/produk.html
@@ -746,7 +746,7 @@
         name: "SPOTIFY PREMIUM",
         img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfk1O1T1yRmoN2iPXZc5ZPZfoNhgVuogzm9Hb4PClKj6qdgegc6VkfYcc&s",
         variants: [
-          { type: "STUDENT - 1 BULAN (PRIVATE)", price: "Rp29.000" },
+          { type: "SPOTIFY PREMIUM- 1 BULAN (PRIVATE)", price: "Rp29.000" },
         ]
       },
       {
