--- a/produk.html
+++ b/produk.html
@@ -721,7 +721,8 @@
         name: "CANVA PRO",
         img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5FKvCVcqCWT6YkGeyC7_1UxfRy_3BFAOPP1n157sSFQ&s",
         variants: [
-          { type: "1 TAHUN MEMBER (INVITE)", price: "Rp20.000" }
+          { type: "1 TAHUN MEMBER (INVITE)", price: "Rp20.000" },
+          { type: "1 BULAN (OWNER/TEAM HEAD", price: "Rp23.000" }
         ]
       },
       {
