--- a/produk.html
+++ b/produk.html
@@ -869,7 +869,8 @@
         name: "BSTATION PREM",
         img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUAcIjoUKoGVPfFoDk1gzZS85Ny0BfFnNuDb0_y0gBXQ&s",
         variants: [
-          { type: "1 TAHUN (SHARING)", price: "Rp25.000" }
+          { type: "1 TAHUN (SHARING)", price: "Rp49.000" },
+          { type: "1 BULAN (SHARING,ANTI LIMIT)", price: "Rp30.000" }
         ]
       }
     ];
