--- a/produk.html
+++ b/produk.html
@@ -763,7 +763,8 @@
         name: "CAPCUT",
         img: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9ThJ6QnCy_kxNPnqQOqKvo_B3XmXx0xuoBk-lfJrOaA&s",
         variants: [
-          { type: "1 BULAN (PRIVATE)", price: "Rp27.000" },
+          { type: "1 BULAN BERGARANSI (PRIVATE)", price: "Rp22.000" },
+          { type: "1 BULAN NO GARANSI (PRIVATE)", price: "Rp17.000" },
           { type: "1 BULAN (SHARING)", price: "Rp25.000" },    
         ]
       },
