--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
   </button>
   <div class="menu-content" id="menu">
     <a href="https://wa.me/6285166497792" target="_blank"><img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>Contact Person</a>
-    <a href="https://www.instagram.com/veltrastoreapp/profilecard/?igsh=MTk3d2MwajBwNW5t" target="_blank"><img src="https://img.icons8.com/fluency/48/instagram-new.png"/>Testimoni</a>
+    <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MzQ0MDAyNjc4MTU5NDg2?story_media_id=3617148591426682422_51326071729&igsh=eDV6ZXhkN3U3NjA3" target="_blank"><img src="https://img.icons8.com/fluency/48/instagram-new.png"/>Testimoni</a>
     <a href="#" onclick="toggleDarkMode()">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
